# lotusMCP

./: .gitignore  ARCHITECTURE.md  HANDOFF.md  README.md  pyproject.toml  scope.example.json
docs/: BENCHMARKING.md  OPERATOR_RUNBOOK.md
lotusmcp/: __init__.py  kb.py  launcher.py  server.py
lotusmcp/control_plane/: __init__.py  anchor.py  cli.py  keyring.py
lotusmcp/demo/: argv_preview.py  autonomous_solve.py  decide_loop.py  interactive_solve.py  replay_solve.py  seed_recon.py
lotusmcp/engine/: __init__.py  budget.py  candidate.py  jobs.py  loop.py  phases.py  progress.py  regime.py  salience.py  scope.py  selector.py
lotusmcp/executor/: __init__.py  argv.py  parse.py  plan.py  replay.py  sandbox.py
lotusmcp/flag/: __init__.py  facade.py  ladder.py  policy.py  ranker.py  scanner.py
lotusmcp/gateway/: __init__.py  profile.py  resolver.py
lotusmcp/kernel/: anchor.py  blobstore.py  canonical.py  case.py  events.py  log.py  projector.py  redaction.py  resume.py  signing.py  state.py  vault.py
lotusmcp/llm/: __init__.py  gateway.py  provider.py  (+1 more)
tests/: test_adapter_review.py  test_anchor.py  test_argv_adapters.py  test_argv_plan.py  test_benchmark_smoke.py  test_blobstore.py  test_canonical.py  test_claim_compaction.py  test_community_playbook.py  test_dashboard.py  test_doctor.py  test_eventstore_concurrency.py  test_flag_engine.py  test_flag_policy.py  test_flag_scanner.py  test_gateway_resolver.py  test_jobs.py  test_library_calibrate.py  test_live_session_backend.py  test_llm_gateway.py  test_loop.py  test_loop_gateway.py  test_loop_regime.py  test_loop_scope.py  test_metrics.py  test_operator_cli.py  test_parse_adapters.py  test_phases_budget.py  test_playbooks.py  test_redaction.py  test_regime.py  test_replay_equivalence.py  test_replay_executor.py  test_replay_writeup.py  test_repro.py  test_resume.py  test_salience.py  test_sandbox_backend.py  test_scope_verifier.py  test_search_fts.py  (+11 more)
(+29 files in other folders)
